# tiltrotor-uav

./: .gitignore  .gitmodules  .travis.yml
.github/workflows/: rust.yml
doc/: .gitignore  Design.md  firmware.txt
doc/pre-design/: .gitignore  Flächen und Leitwerksberechnung.xlsx  Makefile  bibliography.bib  latexmkrc  pre-design.tex  run_latexmk.sh
electronics/flightcontroller/: flightcontroller-symbols.kicad_sym  flightcontroller.kicad_pcb  flightcontroller.kicad_pro  flightcontroller.kicad_sch  fp-lib-table  mcu.kicad_sch  power.kicad_sch  sensors.kicad_sch  sym-lib-table
electronics/flightcontroller/flightcontroller-footprints.pretty/: DFN-6-1EP_3x3mm_P0.65mm_EP1.25x2.7mm.kicad_mod  GT-24-Mini.kicad_mod  HYC80-TF08-XXX.kicad_mod  L_AVX_LMLP0506D.kicad_mod  Omron_2SMPB.kicad_mod  Rohm_BD9D322QWZ.kicad_mod  SW_SPST_PTS815.kicad_mod  USB_C_Receptacle_Amphenol_12402032.kicad_mod
software/: Cargo.toml
software/firmware/: Cargo.toml  Embed.toml  README.md  build.rs  memory.x  openocd-nrf52.cfg  openocd-stm32f1.cfg  openocd-stm32f4.cfg  openocd.gdb
software/firmware/.cargo/: config  config.toml
software/firmware/linker/: memory-nrf52840.x  memory-stm32f103.x  memory-stm32f405.x  memory-stm32f411.x  memory-stm32g491.x
software/firmware/src/: display.rs  imu.rs  main.rs  protocol.rs  radio.rs  trace.rs
software/firmware/src/board/: blackpill.rs  bluepill.rs  feather_nrf52840.rs  flightcontroller.rs  mod.rs
software/motor/: Cargo.toml
software/motor/src/: car.rs  lib.rs
software/protocol/: Cargo.toml
software/protocol/src/: lib.rs
software/prototype_car/: Cargo.toml  build.rs
software/prototype_car/linker/: memory-stm32f411.x
software/prototype_car/src/: display.rs  engines.rs  pid.rs
software/prototype_car/src/board/: mod.rs
software/remote/: .gitignore  Cargo.toml
software/remote-ui/: Cargo.toml
software/remote-ui/.cargo/: config.toml
software/remote-ui/src/: main.rs  radio.rs
software/remote/src/: decoder.rs  gamepad.rs  keyboard.rs  main.rs  radio.rs
software/stabilization/: Cargo.toml
software/stabilization/src/: lib.rs
