[workspace]
members = [
    "firmware",
    "motor",
    "stabilization",
]
resolver = "2"

[workspace.dependencies]

# tracing
defmt = "0.3.8"
defmt-rtt = "0.4.1"

# firmware
fusion-ahrs = "0.2.0"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"
display-interface = { version = "0.5.0", features = ["defmt-03"] }
dummy-pin = "1.0.0"
embedded-graphics = "0.8.1"
embedded-sdmmc = { version = "0.7.0", features = ["defmt-log"], default-features = false }
heapless = { version = "0.8.0", features = ["defmt-03"] }
icm20689 = "0.1.1"
libm = "0.2.8"
mpu9250 = "0.25.0"
nalgebra = { version = "0.34.1", default-features = false }
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
sbus-rs = { version = "0.1.2", features = ["async"] }
ssd1306 = "0.10.0"
thiserror-no-std = "2.0.2"

[profile]
[profile.release]
debug = true
lto = true
