[workspace]
members = [
    "firmware",
    "protocol", "remote",
    "stabilization",
]
resolver = "2"

[workspace.dependencies]

# tracing
defmt = "0.3.8"
defmt-rtt = "0.4.1"

# firmware
fusion-ahrs = "0.2.0"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"
icm20689 = "0.1.1"
libm = "0.2.8"
mpu9250 = "0.25.0"
nalgebra = { version = "0.34.1", default-features = false }
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
postcard = "1.0"
sbus-rs = { version = "0.1.2", features = ["async"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
ssd1306 = "0.10.0"
static_cell = "2"
thiserror-no-std = "2.0.2"

# remote
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.29"
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4.5"

[profile]
[profile.release]
debug = true
lto = true
