[package]
name = "firmware"
version = "0.1.0"
authors = ["Mathias Gottschlag <mgottschlag@gmail.com>", "Maximilian Hess <mail@ne0h.de>"]
edition = "2021"

[dependencies]
protocol = { path = "../protocol" }

cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
defmt = { workspace = true }
defmt-rtt = { workspace = true }
display-interface = { workspace = true }
dummy-pin = { workspace = true }
embedded-graphics = { workspace = true }
embedded-nrf24l01 = { workspace = true }
embedded-sdmmc = { workspace = true }
heapless = { workspace = true }
libm = { workspace = true }
panic-probe = { workspace = true }
serde = { workspace = true }
serde_cbor = { workspace = true, features = ["unsealed_read_write"] }
ssd1306 = { workspace = true }
thiserror-no-std = { workspace = true }

embassy-embedded-hal = { version = "0.1.0", path = "../3rdparty/embassy/embassy-embedded-hal", features = ["defmt"] }
embassy-executor     = { version = "0.5.0", path = "../3rdparty/embassy/embassy-executor",     features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-stm32        = { version = "0.1.0", path = "../3rdparty/embassy/embassy-stm32",        features = ["defmt", "unstable-pac", "time-driver-any", "stm32f411re", "memory-x", "exti", "chrono"], optional = true  }
embassy-sync         = { version = "0.5.0", path = "../3rdparty/embassy/embassy-sync",         features = ["defmt"] }
embassy-time         = { version = "0.3.0", path = "../3rdparty/embassy/embassy-time",         features = ["defmt", "defmt-timestamp-uptime"] }

[profile.release]
debug = 2

[features]
# Compile for a bluepill-based prototype (STM32F1).
# bluepill = [ "stm32f1xx-hal" ]
# Compile for a blackpill-based prototype (STM32F4).
blackpill = [ "embassy-stm32" ]
# Compile for an NRF52840.
# feather_nrf52840 = [ "nrf52840-hal" ]
# Compile for the flightcontroller
# flightcontroller = [ "stm32g4xx-hal" ]
