[package]
name = "firmware"
version = "0.1.0"
authors = ["Mathias Gottschlag <mgottschlag@gmail.com>", "Maximilian Hess <mail@ne0h.de>"]
edition = "2021"

[dependencies]
protocol = { path = "../protocol" }

cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
defmt = { workspace = true }
defmt-rtt = { workspace = true }
display-interface = { workspace = true }
dummy-pin = { workspace = true }
embedded-graphics = { workspace = true }
embedded-nrf24l01 = { workspace = true }
embedded-sdmmc = { workspace = true }
heapless = { workspace = true }
libm = { workspace = true }
minicbor = { workspace = true }
panic-probe = { workspace = true }
ssd1306 = { workspace = true }
thiserror-no-std = { workspace = true }

embassy-embedded-hal = { version = "0.3.0", features = ["defmt"] }
embassy-executor     = { version = "0.7.0", features = ["defmt", "task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-stm32        = { version = "0.2.0", features = ["defmt", "stm32f411ce", "unstable-pac", "memory-x", "time-driver-tim4", "exti", "chrono"], optional = true }
embassy-sync         = { version = "0.6.2", features = ["defmt"] }
embassy-time         = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }

[profile.release]
debug = 2

[features]
# Compile for a blackpill-based prototype (STM32F4).
blackpill = [ "embassy-stm32" ]
# Compile for the flightcontroller
flightcontroller = [ "embassy-stm32" ]
