[package]
name = "firmware"
version = "0.1.0"
authors = ["Mathias Gottschlag <mgottschlag@gmail.com>", "Maximilian Hess <mail@ne0h.de>"]
edition = "2024"

[dependencies]
stabilization = { path = "../stabilization" }

cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
defmt = { workspace = true }
defmt-rtt = { workspace = true }
display-interface = { workspace = true }
dummy-pin = { workspace = true }
embedded-graphics = { workspace = true }
embedded-sdmmc = { workspace = true }
heapless = { workspace = true }
icm20689 = { workspace = true }
libm = { workspace = true }
mpu9250 = { workspace = true }
panic-probe = { workspace = true }
sbus-rs = { workspace = true }
ssd1306 = { workspace = true }
static_cell = { workspace = true }
thiserror-no-std = { workspace = true }

embassy-embedded-hal = { version = "0.3.0", features = ["defmt"] }
embassy-executor     = { version = "0.9.0", features = ["defmt", "arch-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-stm32        = { version = "0.4.0", features = ["defmt", "unstable-pac", "memory-x", "time-driver-tim4", "exti", "chrono"], optional = true }
embassy-sync         = { version = "0.7.2", features = ["defmt"] }
embassy-time         = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb          = { version = "0.5.1", features = ["defmt"] }

[profile.release]
debug = 2

[features]
flightcontroller = [ "embassy-stm32/stm32f405rg" ] # Compile for a blackpill-based prototype (STM32F4).
