[package]
name = "protocol"
version = "0.1.0"
authors = ["Mathias Gottschlag <mgottschlag@gmail.com>", "Maximilian Hess <mail@ne0h.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.3"
serde = { version = "1.0", default-features = false, features = ["derive"] }
