[package]
name = "protocol"
version = "0.1.0"
authors = ["Maximilian Hess <mail@ne0h.de>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
