[package]
name = "remote"
version = "0.1.0"
authors = ["Maximilian Hess <mail@ne0h.de>"]
edition = "2024"

[dependencies]
protocol = { path = "../protocol" }

anyhow = {workspace = true }
bytes = {workspace = true }
clap = {workspace = true }
futures-util = {workspace = true }
rustyline = {workspace = true }
shlex = {workspace = true }
tokio = {workspace = true }
tokio-serial = {workspace = true }
tokio-util = {workspace = true }
